--- a/html/bank.html
+++ b/html/bank.html
@@ -17,8 +17,8 @@
 		<p style="text-align: center">银行卡余额
 			<input type="text" id="balance" value="0.0"></p>
 	</div>
-	<div class="topup" id="login_topup">
-		<button id="top_up" onclick="topupFct()">充值</button>
+	<div class="topupBox" id="login_t">
+		<button id="top_up" onclick="tFct()">充值</button>
 		<p style="text-align: center">转账金额
 			<input type="text" id="topupAmount" placeholder="请输入转账金额" /></p>
 		<p style="text-align: center">交易密码
@@ -29,13 +29,14 @@
 		</p>
 	</div>
 	<div class="transferBox" id="login_transfer">
-		<button id="transfer" onclick="transferFct()">转账</button>
+		<button id="transfer" onclick="transferFct()">转账业务</button>
 		<p style="text-align: center">转账金额
 			<input type="text" id="transferAmount" value="" placeholder="请输入转账金额" /></p>
 		<p style="text-align: center">转账对象
 			<input type="text" id="transferTo" value="" placeholder="请输入转账对象" /></p>
 		<p style="text-align: center">交易密码
 			<input type="password" id="transferPassword" name="transferTo" placeholder="请输入交易密码" /></p>
+        <button id="transferM" onclick="">转账记录</button>
 	</div>
 </div>
 
@@ -50,7 +51,7 @@ function transferFct() {
 	var pwd = $("#transferPassword").val();
 	var ac = $("#transferAmount").val();
 	var to = $("#transferTo").val();
-
+	var k = parseInt(ac);
 	if(ac==""|| isNaN(ac) || ac<0){
 		alert("请输入正确的金额数目！");
 	}
@@ -61,10 +62,7 @@ function transferFct() {
 	    else {
             if (pwd == a['password']) {
                 if (ac <= a['balance']) {
-                    a['transferAmount'] = ac;
-                    a['transferTo'] = to;
-
-                    bankinfo.transfer(JSON.stringify(a));
+                    bankinfo.transfer("213170002", to, k);
                     alert("转账成功！");
                 } else {
                     alert("银行卡余额不足！");
@@ -75,12 +73,12 @@ function transferFct() {
         }
 	}
 }
-function topupFct(){
+function tFct(){
 	var y = bankinfo.query("213170002");
 	var a = JSON.parse(y);
 	var pwd = $("#topuppassword").val();
 	var ac = $("#topupAmount").val();
-
+	var k = parseInt(ac);
 	var d = null;
 	var obj = document.getElementsByTagName("input");
 	for(var i=0;i<obj.length;i++){
@@ -96,9 +94,8 @@ function topupFct(){
 		if(pwd == a['password']){
 		    if (d == 2) {
                 if (ac <= a['balance']) {
-                    a['transferAmount'] = ac;
-                    a['transferTo'] = d;
-                    bankinfo.transfToEcard(JSON.stringify(a));
+                    alert("123");
+                    bankinfo.transfToEcard("213170002", k);
                     alert("充值成功！");
                 }
                 else {
@@ -107,9 +104,7 @@ function topupFct(){
             }
 		    else if(d == 0){
 		        if (ac <= a['eCardBalance']){
-                    a['transferAmount'] = ac;
-                    a['transferTo'] = d;
-                    bankinfo.transfTocard(JSON.stringify(a));
+                    bankinfo.transfTocard("213170002", k);
                     alert("提现成功！");
                 }
 		        else {
@@ -205,7 +200,7 @@ function searchFct(){
 		background-position: center;
 		color:#000000;
 	
-		padding: 50px 62px 50px 62px;
+		padding: 50px 30px 50px 30px;
 		font-size:32px;
 		font-family: 微软雅黑,宋体,Arial,Helvetica,Verdana,sans-serif;
 		font-weight:bold;
@@ -220,12 +215,12 @@ function searchFct(){
     	background:#debecc;
     }
 
-	#login_topup{
+	#login_t{
 		margin-top: 10px;
 		margin-left: 7%;
 		height:200px;
 	}
-	#login_topup button {
+	#login_t button {
 		text-decoration:none;
 		background-image: url(image/1.jpg);
 		background-position: center;
@@ -241,7 +236,7 @@ function searchFct(){
 		-moz-transition:all linear 0.30s;
 		transition:all linear 0.30s;
 	}
-	#login_topup button:hover {
+	#login_t button:hover {
 		background:#debecc;
 	}
 
@@ -267,7 +262,7 @@ function searchFct(){
 		border-radius: 7px;
 		border-image: url(image/1.jpg) 30;
     }
-	.topup{
+	.topupBox{
 		border: 15px solid #eb6ea0;
 		float: left;
 		text-align: center;
