--- a/html/transfRecord.html
+++ b/html/transfRecord.html
@@ -6,27 +6,21 @@
 </head>
 
 <body>
-	<input type="text" name="search" placeholder="填写转账金额">
+
 	<table id="myTable" border="solid">
 		<tr>
 			<th style="width: 10%; align-self: center;">转账日期</th>
 			<th style="width: 10%; align-self: center;">转账对象</th>
 			<th style="width: 10%; align-self: center;">转账金额</th>
 		</tr>
-		<tr>
-			<td>2019-8-7</td>
-			<td style="text-align: center;">213170001</td>
-			<td>4396</td>
-			
-		</tr>
 	</table>
 
 	<script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
 
 	<script type="text/javascript">
-		var record = bankinfo.queryrecord("213170001");
+		var a = bankinfo.queryrecord("213170001");
 		for (var i = 0; i<3; i++){
-			var row = record.
+			$("#myTable").append("<tr><td style='text-align: center'>"+a.elementAt(i).getOtime()+"</td><td style='text-align: center'>"+a.elementAt(i).getRecord()+"</td><td style='text-align: center'>"+a.elementAt(i).getChange()+"</td>");
 		}
 	</script>
 
