--- a/html/TimeTable.html
+++ b/html/TimeTable.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>课程表</title>
-<meta charset="UTF-8">
+    <title>课程表</title>
+    <meta charset="UTF-8">
 </head>
 <body>
 <div style="text-align: center">
@@ -10,15 +10,17 @@
         <input type="text" id="Ecardnumber" placeholder="搜索">
         <input type="button" value="搜索" id="search_btn">
     </div>
-    <h1  align="center"><b><em><caption>课程表</caption></em></b></h1>
-         <div align="center" >
-             <p>用户身份:</p>
-             <p id="useridentify"></p>
-         </div>
-    <table style="color:#000000"width="928" height="395" border="1" align="center">
+    <h1 align="center"><b><em>
+        <caption>课程表</caption>
+    </em></b></h1>
+    <div align="center">
+        <p>用户身份:</p>
+        <p id="useridentify"></p>
+    </div>
+    <table style="color:#000000" width="928" height="395" border="1" align="center">
         <tr>
-            <td width="76"> </td>
-            <td width="86" height="50"> </td>
+            <td width="76"></td>
+            <td width="86" height="50"></td>
             <td width="100">周一</td>
             <td width="100">周二</td>
             <td width="100">周三</td>
@@ -76,40 +78,152 @@
     window.onload = function () {
         var search_btn = document.getElementById('search_btn');
         search_btn.onclick = function ()
-    {
-        var x = document.getElementById('Ecardnumber').value;
-        alert(x);
-        //var res = 1;//测试
-        var res = login.exist(x);
-        if(res == 1) {
-            var str = personinfo.query(x);
-            var obj = JSON.parse(str);
-            alert("用户存在");//跳转
-            var a = document.getElementById("useridentify");
-            a.innerHTML = obj['state'];
-            var y = document.getElementById("115");
-            y.innerHTML ="软件实践[1-2]";
-            y.innerHTML += "<br/>信号与系统[3-4]"
-            var b = 212312;
-            var c = b%1000;
-            var d = 0;
-            var e = 0;
-            if(Math.floor(b/1000) !=0){
-            d = (Math.floor(b/1000))%1000;
-            if(Math.floor(b/1000000)!=0){
-            e = (Math.floor(b/1000000))%1000;
-            }
-            }
-            alert(c);
-            alert(d);
-            alert(e);
+        {
+            var x = document.getElementById('Ecardnumber').value;
+            alert(x);
+            //var res = 1;//测试
+            var res = login.exist(x);
 
-        }
-        else{
-            alert("搜索不到该用户");
+            if(res == 1) {
+                var str = personinfo.query(x);
+                var obj = JSON.parse(str);
+                alert("用户存在");//跳转
+                var a = document.getElementById("useridentify");
+                a.innerHTML = obj['state'];
+                var y0 = document.getElementById("115");
+                var y1 = document.getElementById("215");
+                var y2 = document.getElementById("315");
+                var y3 = document.getElementById("415");
+                var y4 = document.getElementById("515");
+                var y5 = document.getElementById("160");
+                var y6 = document.getElementById("260");
+                var y7 = document.getElementById("360");
+                var y8 = document.getElementById("460");
+                var y9 = document.getElementById("560");
+                var vec = selectCourseinfo.query(x);
+                alert(vec.elementAt(0).getCourseName());
+               for (var i = 0; i <vec.size() ; i++){
+
+                   var b = vec.elementAt(i).getTime();
+                   var c = b%1000;
+                   var d = 0;
+                   var e = 0;
+                   if(Math.floor(b/1000) !==0){
+                       d = (Math.floor(b/1000))%1000;
+                       if(Math.floor(b/1000000)!==0){
+                           e = (Math.floor(b/1000000))%1000;
+                       }
+                   }
+                   alert(c);
+                   if(c !==0){
+                       if((c==112)||(c==113)||(c==134)||(c==135)){
+                           y0.innerHTML +=  vec.elementAt(i).getCourseName() + "["+ Math.floor(c/10)%10+"-"+c%10+"]"+"<br/>";
+                       }
+                       if((c==212)||(c==213)||(c==234)||(c==235)){
+                           y1.innerHTML +=  vec.elementAt(i).getCourseName() + "["+ Math.floor(c/10)%10+"-"+c%10+"]"+"<br/>";
+                       }
+                       if((c==312)||(c==313)||(c==334)||(c==335)){
+                           y2.innerHTML +=  vec.elementAt(i).getCourseName() + "["+ Math.floor(c/10)%10+"-"+c%10+"]"+"<br/>";
+                       }
+                       if((c==412)||(c==413)||(c==434)||(c==435)){
+                           y3.innerHTML +=  vec.elementAt(i).getCourseName() + "["+ Math.floor(c/10)%10+"-"+c%10+"]"+"<br/>";
+                       }
+                       if((c==512)||(c==513)||(c==534)||(c==535)){
+                           y4.innerHTML +=  vec.elementAt(i).getCourseName() + "["+ Math.floor(c/10)%10+"-"+c%10+"]"+"<br/>";
+                       }
+                       if((c==167)||(c==168)||(c==189)||(c==180)){
+                           y5.innerHTML +=  vec.elementAt(i).getCourseName() + "["+ Math.floor(c/10)%10+"-"+c%10+"]"+"<br/>";
+                       }
+                       if((c==267)||(c==268)||(c==289)||(c==280)){
+                           y6.innerHTML +=  vec.elementAt(i).getCourseName() + "["+ Math.floor(c/10)%10+"-"+c%10+"]"+"<br/>";
+                       }
+                       if((c==367)||(c==368)||(c==389)||(c==380)){
+                           y7.innerHTML +=  vec.elementAt(i).getCourseName() + "["+ Math.floor(c/10)%10+"-"+c%10+"]"+"<br/>";
+                       }
+                       if((c==467)||(c==468)||(c==489)||(c==480)){
+                           y8.innerHTML +=  vec.elementAt(i).getCourseName() + "["+ Math.floor(c/10)%10+"-"+c%10+"]"+"<br/>";
+                       }
+                       if((c==567)||(c==568)||(c==589)||(c==580)){
+                           y9.innerHTML +=  vec.elementAt(i).getCourseName() + "["+ Math.floor(c/10)%10+"-"+c%10+"]"+"<br/>";
+                       }
+                   }
+                   if(d !==0){
+                       if((d==112)||(d==113)||(d==134)||(d==135)){
+                           y0.innerHTML +=  vec.elementAt(i).getCourseName() + "["+ Math.floor(c/10)%10+"-"+c%10+"]"+"<br/>";
+                       }
+                       if((d==212)||(d==213)||(d==234)||(d==235)){
+                           y1.innerHTML +=  vec.elementAt(i).getCourseName() + "["+ Math.floor(c/10)%10+"-"+c%10+"]"+"<br/>";
+                       }
+                       if((d==312)||(d==313)||(d==334)||(d==335)){
+                           y2.innerHTML +=  vec.elementAt(i).getCourseName() + "["+ Math.floor(c/10)%10+"-"+c%10+"]"+"<br/>";
+                       }
+                       if((d==412)||(d==413)||(d==434)||(d==435)){
+                           y3.innerHTML +=  vec.elementAt(i).getCourseName() + "["+ Math.floor(c/10)%10+"-"+c%10+"]"+"<br/>";
+                       }
+                       if((d==512)||(d==513)||(d==534)||(d==535)){
+                           y4.innerHTML +=  vec.elementAt(i).getCourseName() + "["+ Math.floor(c/10)%10+"-"+c%10+"]"+"<br/>";
+                       }
+                       if((d==167)||(d==168)||(d==189)||(d==180)){
+                           y5.innerHTML +=  vec.elementAt(i).getCourseName() + "["+ Math.floor(c/10)%10+"-"+c%10+"]"+"<br/>";
+                       }
+                       if((d==267)||(d==268)||(d==289)||(d==280)){
+                           y6.innerHTML +=  vec.elementAt(i).getCourseName() + "["+ Math.floor(c/10)%10+"-"+c%10+"]"+"<br/>";
+                       }
+                       if((d==367)||(d==368)||(d==389)||(d==380)){
+                           y7.innerHTML +=  vec.elementAt(i).getCourseName() + "["+ Math.floor(c/10)%10+"-"+c%10+"]"+"<br/>";
+                       }
+                       if((d==467)||(d==468)||(d==489)||(d==480)){
+                           y8.innerHTML +=  vec.elementAt(i).getCourseName() + "["+ Math.floor(c/10)%10+"-"+c%10+"]"+"<br/>";
+                       }
+                       if((d==567)||(d==568)||(d==589)||(d==580)){
+                           y9.innerHTML +=  vec.elementAt(i).getCourseName() + "["+ Math.floor(c/10)%10+"-"+c%10+"]"+"<br/>";
+                       }
+                   }
+                if(e !==0){
+                    if((e==112)||(e==113)||(e==134)||(e==135)){
+                        y0.innerHTML +=  vec.elementAt(i).getCourseName() + "["+ Math.floor(c/10)%10+"-"+c%10+"]"+"<br/>";
+                    }
+                }
+                if((e==212)||(e==213)||(e==234)||(e==235)){
+                    y1.innerHTML +=  vec.elementAt(i).getCourseName() + "["+ Math.floor(c/10)%10+"-"+c%10+"]"+"<br/>";
+                }
+                if((e==312)||(e==313)||(e==334)||(e==335)){
+                    y2.innerHTML +=  vec.elementAt(i).getCourseName() + "["+ Math.floor(c/10)%10+"-"+c%10+"]"+"<br/>";
+                }
+                if((e==412)||(e==413)||(e==434)||(e==435)){
+                    y3.innerHTML +=  vec.elementAt(i).getCourseName() + "["+ Math.floor(c/10)%10+"-"+c%10+"]"+"<br/>";
+                }
+                if((e==512)||(e==513)||(e==534)||(e==535)){
+                    y4.innerHTML +=  vec.elementAt(i).getCourseName() + "["+ Math.floor(c/10)%10+"-"+c%10+"]"+"<br/>";
+                }
+                if((e==167)||(e==168)||(e==189)||(e==180)){
+                    y5.innerHTML +=  vec.elementAt(i).getCourseName() + "["+ Math.floor(c/10)%10+"-"+c%10+"]"+"<br/>";
+                }
+                if((e==267)||(e==268)||(e==289)||(e==280)){
+                    y6.innerHTML +=  vec.elementAt(i).getCourseName() + "["+ Math.floor(c/10)%10+"-"+c%10+"]"+"<br/>";
+                }
+                if((e==367)||(e==368)||(e==389)||(e==380)){
+                    y7.innerHTML +=  vec.elementAt(i).getCourseName() + "["+ Math.floor(c/10)%10+"-"+c%10+"]"+"<br/>";
+                }
+                if((e==467)||(e==468)||(e==489)||(e==480)){
+                    y8.innerHTML +=  vec.elementAt(i).getCourseName() + "["+ Math.floor(c/10)%10+"-"+c%10+"]"+"<br/>";
+                }
+                if((e==567)||(e==568)||(e==589)||(e==580)){
+                    y9.innerHTML +=  vec.elementAt(i).getCourseName() + "["+ Math.floor(c/10)%10+"-"+c%10+"]"+"<br/>";
+                }
+            }
+
+            }
+
+            else{
+                alert("搜索不到该用户");
+            }
         }
     }
-    }
+
+
+
+
 </script>
 </body>
 </html>
