--- a/html/audit.html
+++ b/html/audit.html
@@ -23,6 +23,7 @@
 	<script type="text/javascript">
 		(function (){
 		var a = login.getAll();
+		alert("1234")
 		for (var i = 0; i<5; i++){
 			var v = a.elementAt(i).getEcardname();
 
@@ -30,7 +31,7 @@
 				+"</td><td>"+a.elementAt(i).getSex()+"</td><td>"+a.elementAt(i).getStatus()+"</td><td>" +
 					"<input type='checkbox' name='ispass' value='"+v+"'/>"+"</td></tr>");
 		}})();
-
+		alert("12345")
 
 	function pass() {
 		alert("123");
