--- a/html/SelectCourse.html
+++ b/html/SelectCourse.html
@@ -7,9 +7,6 @@
 <body>
 <div style="text-align: center">
     <div>
-        <input type="button" value="测试" id="search_btn" onclick="addTr()">
-    </div>
-    <div>
         <h1 align="center"><b><em>
             <caption>选课系统</caption>
         </em></b></h1>
@@ -26,11 +23,20 @@
         </table>
     </div>
 </div>
+<div align="center">
+    <button id="back" onclick="Back()">返回</button>
+</div>
+<script src=".../jquery.min.js?t=1484026799191" charset="utf-8"></script>
 <script>
-    function addTr(){
+    window.onload = function()
+    {
         var vec = courseInfo.getAll();
         //alert(vec.elementAt(0).getCourseName());
-        for (var i = 0; i <vec.size() ; i++){
+        var idx = new Array();
+        var btnarray = new Array();
+        //var a = 0;
+        for (var i = 0; i <vec.size() ; i++)
+        {
             var tabel = document.getElementById("AllCourse");
             var tr = document.createElement("tr");
             var td0 = document.createElement("td");
@@ -41,27 +47,54 @@
             var text0 = document.createTextNode(vec.elementAt(i).getCourseName());
             var text1 = document.createTextNode(vec.elementAt(i).getTeacher());
             var text2 = document.createTextNode(vec.elementAt(i).getCourseTime());
-            var text3 = document.createTextNode("机房");
-            var btn = document.createElement("button");
-            alert("hhh");
+            var text3 = document.createTextNode("vec.elementAt(i).getClassroom()");
+            //vec.elementAt(i).getClassroom()
+            idx[i] =vec.elementAt(i).getIdx();
+            //var e = "213171645";
+            var a = vec.elementAt(i).getIdx();
+            var b = vec.elementAt(i).getCourseName();
+            var c = vec.elementAt(i).getCourseTime();
+            var d = vec.elementAt(i).getTeacher();
+            btnarray[i] = document.createElement("button");
+            //alert('hhh');
             var t=document.createTextNode("选课");
-            btn.appendChild(t);
-            btn.onclick = function(){
-                alert("选不了嘻嘻");
-            };
+            btnarray[i].appendChild(t);
             td0.appendChild(text0);
             td1.appendChild(text1);
             td2.appendChild(text2);
             td3.appendChild(text3);
-            td4.appendChild(btn);
+            td4.appendChild(btnarray[i]);
             tr.appendChild(td0);
             tr.appendChild(td1);
             tr.appendChild(td2);
             tr.appendChild(td3);
             tr.appendChild(td4);
             tabel.appendChild(tr);
+            //btnarray[i] = btn;
+            /*btnarray[i].onclick = function(){
+                alert("测试");
+                alert(i);
+                //var e = "213171645";
+                //var b =$(this).parent("td1").text();
+                //alert(b);
+                selectCourseinfo.insert(e,a,b,c,d);
+                alert("000");
+            };*/
         }
+        //alert(idx);
+        //alert("0");
+        /*btnarray[0].onclick = function(){
+            alert("测试");
+            //var e = "213171645";
+            var b =this.parentElement("td1");
+            alert(b);
+            //selectCourseinfo.insert(e,a,b,c,d);
+        };*/
      }
+    function Back()
+    {
+        window.location.href="education.html";
+    }
 
 
 </script>
