补充商品卡片和聊天功能

--- a/html/shop.html
+++ b/html/shop.html
@@ -166,7 +166,7 @@ $(document).on("click",'#Buy',function () {
         goodinfo.consumption("213170001",price*number);
 
     }
-    $("#basketbody").remove();
+    $("#basketbody").empty();
 
 
 
@@ -175,7 +175,7 @@ $(document).on("click",'#Buy',function () {
 })
 
        $("#cancel").click(function () {
-           $("#basketbody").remove();
+        $("#basketbody").empty();
        })
 
 
